# leptos-forms-rs

./: .gitignore  .markdownlint.yaml  .nixpkgs  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  COMPONENT_ARCHITECTURE.md  CRATES_README.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  LEPTOS_0.8_MIGRATION_ANALYSIS.md  Makefile  README.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v1.1.0.md  ROADMAP.md  SYSTEM_DESIGN.md  TDD_STRATEGY.md  TEST_RESULTS.md  e2e_results.json  flake.nix  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  setup-precommit.sh  vite.config.js  webpack.config.js
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  contract-tests.yml  wasm-tests.yml
docs/: COMPARISON_WITH_REACT_HOOK_FORM.md  PROJECT_ORGANIZATION.md  PROJECT_STATUS.md  QUICK_COMPARISON_TABLE.md  README.md  WASM_OPTIMIZATION_GUIDE.md  api-design.md  cicd-pipeline.md  design.md  getting-started.md  technical-requirements.md
docs/api/: api-reference.md
docs/architecture/: COMPONENT_ARCHITECTURE.md  SYSTEM_DESIGN.md  adr-001-rust-leptos-choice.md  adr-002-serialization-strategy.md  adr-003-cache-storage-strategy.md  api-design.md  design.md  technical-requirements.md
docs/deployment/: cicd-pipeline.md  security-assessment.md
docs/examples/: README.md
docs/guides/: contributing.md  development-workflow.md  getting-started.md
docs/implementation/: IMPLEMENTATION_GUIDE.md  implementation-plan.md  project-charter.md
docs/migration/: COMPATIBILITY_LAYER_IMPLEMENTATION.md  COMPATIBILITY_LAYER_STATUS.md  COMPATIBILITY_LAYER_STRATEGY.md  LEPTOS_0.8_COMPATIBILITY.md  LEPTOS_0.8_MIGRATION_ANALYSIS.md  leptos-0-8-migration.md
docs/testing/: API_CONTRACT_TESTING.md  performance-testing-plan.md  testing-strategy.md
examples/basic-form/: Cargo.toml
examples/basic-form/src/: main.rs
examples/compatibility-example/: Cargo.toml
examples/compatibility-example/src/: main.rs
examples/complex-form/: Cargo.toml
examples/complex-form/src/: main.rs
leptos-forms/: Cargo.toml
leptos-forms-rs/: Cargo.toml  FIELD_ARRAY_README.md  FORM_WIZARD_README.md  INTEGRATION_TESTING_SUMMARY.md  wasm-pack.toml
leptos-forms-rs-macro/: Cargo.toml
leptos-forms-rs-macro/src/: lib.rs
leptos-forms-rs/src/: lib.rs  wasm_optimizations.rs
leptos-forms-rs/src/compat/: components.rs  context.rs  effects.rs  mod.rs  resources.rs  signals.rs  views.rs
leptos-forms-rs/src/components/: checkbox.rs  code_input.rs  field.rs  field_array.css  field_array.rs  field_array_example.rs  file_input.rs  file_upload_input.rs  form.rs  form_wizard.css  form_wizard.rs  form_wizard_example.rs  input.rs  markdown_input.rs  mod.rs  radio.rs  rich_text_input.rs  select.rs  textarea.rs
leptos-forms-rs/src/core/: form_handle.rs  mod.rs  performance.rs  traits.rs  types.rs
leptos-forms-rs/src/devtools/: mod.rs
leptos-forms-rs/src/error/: mod.rs
leptos-forms-rs/src/hooks/: mod.rs
leptos-forms-rs/src/tests/: integration_tests.rs  mod.rs
leptos-forms-rs/src/utils/: mod.rs
leptos-forms-rs/src/validation/: mod.rs
leptos-forms-rs/tests/: leptos_compatibility_tests.rs  wasm_basic_test.rs
playwright-report/: index.html
scripts/: analyze-wasm.sh  build-wasm.sh
test-results/: .last-run.json  results.json  results.xml
test-results/basic-form-Basic-Form-Exam-19a6b-password-field-requirements-webkit/: video.webm
test-results/basic-form-Basic-Form-Exam-208dc--login-form-with-all-fields-Mobile-Chrome/: video.webm
test-results/basic-form-Basic-Form-Exam-208dc--login-form-with-all-fields-webkit/: video.webm
test-results/basic-form-Basic-Form-Exam-34669--handle-keyboard-navigation-Mobile-Chrome/: video.webm
test-results/basic-form-Basic-Form-Exam-59cb8-ata-and-submit-successfully-Mobile-Chrome/: video.webm
test-results/basic-form-Basic-Form-Exam-59cb8-ata-and-submit-successfully-webkit/: video.webm
test-results/basic-form-Basic-Form-Exam-77a6e-username-field-requirements-Mobile-Safari/: video.webm
test-results/basic-form-Basic-Form-Exam-be416-orm-state-during-navigation-Mobile-Chrome/: video.webm
test-results/basic-form-Basic-Form-Exam-be416-orm-state-during-navigation-webkit/: video.webm
test-results/basic-form-Basic-Form-Exam-d7865-field-focus-and-blur-events-Mobile-Chrome/: video.webm
test-results/basic-form-Basic-Form-Exam-d7865-field-focus-and-blur-events-webkit/: video.webm
test-results/basic-form-Basic-Form-Example-should-work-on-mobile-devices-webkit/: video.webm
tests/: Cargo.toml  run_tests.sh
tests/benchmarks/: Cargo.toml
tests/benchmarks/benches/: form_creation.rs
tests/contracts/: Cargo.toml
tests/contracts/src/: api_schema.rs  basic_contract_tests.rs  consumer_contracts.rs  contract_validation.rs  framework.rs  lib.rs  monitoring.rs  simple_contract_tests.rs
tests/e2e/: README.md  basic-form.spec.ts  complex-form.spec.ts  form-components.spec.ts  global-setup.ts  global-teardown.ts  performance-testing.spec.ts  setup-test.spec.ts  smoke.spec.ts  test-file.txt  validation-comprehensive.spec.ts
tests/e2e/utils/: test-helpers.spec.ts  test-helpers.ts
tests/e2e/web-server/: README.md  basic-form.html  complex-form.html  components.html  index.html  server.js
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs  module_integration_tests.rs
tests/src/: lib.rs
tests/unit/: Cargo.toml  lib.rs
tests/unit/src/: additional_input_types_tests.rs  advanced_validation_tests.rs  conditional_validation_hook_tests.rs  conditional_validation_tests.rs  devtools_integration_tests.rs  enhanced_field_arrays_advanced_tests.rs  enhanced_field_arrays_tests.rs  form_component_tests.rs  form_components.rs  form_field_component_tests.rs  form_handle.rs  form_handle_comprehensive.rs  form_hooks.rs  form_persistence_tests.rs  form_types.rs  form_validation.rs  input_component_tests.rs  lib.rs  main.rs  minimal_test.rs  multi_step_forms_tests.rs  multi_step_forms_wizard_tests.rs  performance_benchmarking_tests.rs  real_time_validation_tests.rs  stress_testing.rs  validation_engine_tests.rs  validation_rules_engine_tests.rs
(+97 files in other folders)
