[workspace]
resolver = "2"
members = [
    "leptos-forms-rs",
    "leptos-forms-rs-macro",
    "examples/basic-form",
    "examples/complex-form",
    "tests/unit"
]

[workspace.dependencies]
# Common dependencies (non-optional in workspace)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
web-sys = "0.3"
wasm-bindgen = "0.2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
gloo-net = "0.6"
gloo-timers = "0.3"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
lazy_static = "1.4"
wasm-bindgen-test = "0.3"
wasm-pack = "0.12"

# Leptos 0.8
leptos = "0.8"
