[package]
name = "leptos-forms-rs-macro"
version = "0.2.0"
edition = "2021"
description = "Procedural macros for leptos-forms-rs"
license = "MIT"
repository = "https://github.com/your-org/leptos-forms-rs"
keywords = ["leptos", "forms", "macro", "procedural-macro"]
categories = ["web-programming", "wasm"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
