[package]
name = "leptos-forms-rs-macro"
version = "1.1.3"
edition = "2021"
authors = ["Cloud Shuttle <info@cloudshuttle.com>"]
description = "Procedural macros for leptos-forms-rs"
license = "MIT"
repository = "https://github.com/cloud-shuttle/leptos-forms-rs"
homepage = "https://github.com/cloud-shuttle/leptos-forms-rs"
documentation = "https://docs.rs/leptos-forms-rs-macro"
keywords = ["leptos", "forms", "macro", "procedural-macro"]
categories = ["web-programming", "wasm"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
