[package]
name = "leptos-forms-rs"
version = "1.0.0"
edition = "2021"
authors = ["Cloud Shuttle <info@cloudshuttle.com>"]
description = "Type-safe, reactive form handling library for Leptos applications"
license = "MIT"
repository = "https://github.com/cloud-shuttle/leptos-forms-rs"
homepage = "https://github.com/cloud-shuttle/leptos-forms-rs"
documentation = "https://docs.rs/leptos-forms-rs"
readme = "README.md"
keywords = ["leptos", "forms", "validation", "web", "wasm", "reactive", "typescript"]
categories = ["web-programming", "wasm"]

[dependencies]
# Leptos 0.8
leptos = { version = "0.8", features = ["csr"] }

# Common dependencies
serde = { workspace = true }
serde_json = { workspace = true }
leptos-forms-rs-macro = { path = "../leptos-forms-rs-macro" }
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-bindgen = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
gloo-net = { workspace = true }
gloo-timers = { workspace = true, features = ["futures"] }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }

[features]
default = ["csr"]
csr = ["leptos/csr"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]

[lib]
name = "leptos_forms_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
