[package]
name = "compatibility-example"
version = "0.1.0"
edition = "2021"
description = "Example demonstrating Leptos 0.6 and 0.8 compatibility"

[dependencies]
leptos-forms-rs = { path = "../../leptos-forms-rs", features = ["leptos-0-6"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["leptos-0-6"]
leptos-0-6 = ["leptos-forms-rs/leptos-0-6"]
leptos-0-8 = ["leptos-forms-rs/leptos-0-8"]
