[package]
name = "complex-form-example"
version = "1.0.0"
edition = "2021"

[dependencies]
leptos = { workspace = true }
leptos-forms-rs = { path = "../../leptos-forms-rs" }
leptos-forms-rs-macro = { path = "../../leptos-forms-rs-macro" }
serde = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
