[package]
name = "leptos-forms-rs-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { workspace = true }
leptos-forms-rs = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "form_creation"
harness = false

[[bench]]
name = "form_validation"
harness = false

[[bench]]
name = "form_field_operations"
harness = false
