[package]
name = "leptos-forms-rs-benchmarks"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
leptos = "0.8"
leptos-forms-rs = { path = "../../leptos-forms-rs" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "form_creation"
path = "benches/form_creation.rs"
harness = false
