[package]
name = "leptos-forms-rs-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { workspace = true }
leptos-forms-rs = { workspace = true }
wasm-bindgen-test = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "integration_tests"
harness = false
