[package]
name = "leptos-forms-rs-unit-tests"
version = "0.2.0"
edition = "2021"

[dependencies]
leptos = { workspace = true }
leptos-forms-rs = { path = "../../leptos-forms-rs" }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }

[[test]]
name = "integration_tests"
path = "src/lib.rs"
